# github_actions_test

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: run_pytest.yml
tests/: test_main.py
