[tool.poetry]
name = "github_actions_test"
version = "0.1.0"
description = ""
authors = ["Christopher Winkelmann <winkelchri@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
